--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <dependency.tinylog.version>1.3.2</dependency.tinylog.version>
     <dependency.cli.version>1.4</dependency.cli.version>
     <plugin.compiler.version>3.7.0</plugin.compiler.version>
-    <plugin.compiler.jre.version>1.8</plugin.compiler.jre.version>
+    <plugin.compiler.jre.version>1.9</plugin.compiler.jre.version>
     <plugin.surefire.version>2.20.1</plugin.surefire.version>
     <plugin.jar.version>3.0.2</plugin.jar.version>
     <plugin.shade.version>3.1.0</plugin.shade.version>
@@ -48,6 +48,21 @@
       <groupId>org.tinylog</groupId>
       <artifactId>tinylog</artifactId>
       <version>${dependency.tinylog.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>retrofit</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>converter-gson</artifactId>
+      <version>2.3.0</version>
     </dependency>
   </dependencies>
 
