--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
       <artifactId>converter-gson</artifactId>
       <version>2.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>${dependency.cli.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
