--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
     <dependency.junit.version>4.12</dependency.junit.version>
     <dependency.tinylog.version>1.3.2</dependency.tinylog.version>
     <dependency.cli.version>1.4</dependency.cli.version>
+    <dependency.retrofit2.version>2.3.0</dependency.retrofit2.version>
+    <dependency.gson.version>2.8.2</dependency.gson.version>
+    <dependency.guava.version>24.0-jre</dependency.guava.version>
     <plugin.compiler.version>3.7.0</plugin.compiler.version>
     <plugin.compiler.jre.version>1.8</plugin.compiler.jre.version>
     <plugin.surefire.version>2.20.1</plugin.surefire.version>
@@ -57,17 +60,22 @@
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>retrofit</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.2</version>
+      <version>${dependency.retrofit2.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>converter-gson</artifactId>
-      <version>2.3.0</version>
+      <version>${dependency.retrofit2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>${dependency.gson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${dependency.guava.version}</version>
     </dependency>
   </dependencies>
 
