--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <dependency.junit.version>4.12</dependency.junit.version>
     <dependency.tinylog.version>1.3.2</dependency.tinylog.version>
-    <dependency.cli.version>1.4</dependency.cli.version>
+    <dependency.picocli.version>2.3.0</dependency.picocli.version>
     <dependency.retrofit2.version>2.3.0</dependency.retrofit2.version>
     <dependency.gson.version>2.8.2</dependency.gson.version>
     <dependency.guava.version>24.0-jre</dependency.guava.version>
@@ -53,9 +53,9 @@
       <version>${dependency.tinylog.version}</version>
     </dependency>
     <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
-      <version>${dependency.cli.version}</version>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+      <version>${dependency.picocli.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
