--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
           <minimizeJar>false</minimizeJar>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-              <mainClass>edu.gwu.ai.codeknights.tictactoe.Main</mainClass>
+              <mainClass>edu.gwu.ai.codeknights.tictactoe.Spectator</mainClass>
             </transformer>
           </transformers>
         </configuration>
