--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>edu.gwu.ai.codeknights</groupId>
   <artifactId>csci6511-proj2-tictactoe</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>csci6511-proj2-tictactoe</name>
